--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             align-items: center;
             text-align: center;
         }
-        .object2{
+
+        .object2 {
             margin-top: 50px;
             text-align: center;
         }
@@ -90,15 +91,13 @@
             </p>
         </div>
     </div>
-        <div class="object2">
+    <div class="object2">
             <div>
                 <div id="title2">
                     <p>
-                    <h1>Email <h1 style="background-color: yellow; margin-left: 150px; margin-right: 150px;">marketing platform</h1> <h1>to grow your business</h1>
+                    <h1>Email <h1 style="background-color: yellow; margin-left: 150px; margin-right: 150px;">marketing platform</h1> <h1>to grow your business!</h1>
                     </p>
                 </div>
             </div>
-
-
-        </div>
+    </div>
 </body>
