--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div>
                 <div id="title2">
                     <p>
-                    <h1>Email <h1 style="background-color: yellow; margin-left: 150px; margin-right: 150px;">marketing platform</h1> <h1>to grow your business!</h1>
+                    <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Email <h1 style="background-color: rgb(254, 254, 95); margin-left: 170px; margin-right: 170px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">marketing platform</h1> <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">to grow your business!</h1>
                     </p>
                 </div>
             </div>
