inserted 2 pics(unorganized)

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             width: 100vw;
         }
 
+
         body>div {
             width: 50%;
         }
@@ -51,6 +52,12 @@
         .object2 {
             margin-top: 50px;
             text-align: center;
+        }
+        .pictures {
+            display: flex;
+            flex-direction: column;
+            margin-top: 50px;
+            margin-right: 15px;
         }
     </style>
     <title>Alaa Al Banna</title>
@@ -97,6 +104,17 @@
                     <p>
                     <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Email <h1 style="background-color: rgb(254, 254, 95); margin-left: 170px; margin-right: 170px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">marketing platform</h1> <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">to grow your business!</h1>
                     </p>
+                </div>
+                <div class="pictures" style="margin-top: 50px; margin-right: 15px;">
+                    <div>
+                        <div id="picmail">
+                            <img src="blue mail.png" alt="mail" style="width: 60px; height: 60px;"><br>Email marketing
+                        </div>
+                        <div>
+                            <img src="profilepic.png" alt="profile" style="background-blend-mode:darken; height: 60px; width: 80px;">
+                        </div>
+                    </div>
+
                 </div>
             </div>
     </div>
