--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
             margin-top: 50px;
             text-align: center;
         }
+
         .pictures {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             margin-top: 50px;
-            margin-right: 15px;
+            align-items: center;
+            margin-left: 30px;
+            flex-wrap: wrap;
         }
     </style>
     <title>Alaa Al Banna</title>
@@ -99,23 +102,52 @@
         </div>
     </div>
     <div class="object2">
-            <div>
-                <div id="title2">
-                    <p>
-                    <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Email <h1 style="background-color: rgb(254, 254, 95); margin-left: 170px; margin-right: 170px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">marketing platform</h1> <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">to grow your business!</h1>
-                    </p>
-                </div>
-                <div class="pictures" style="margin-top: 50px; margin-right: 15px;">
-                    <div>
-                        <div id="picmail">
-                            <img src="blue mail.png" alt="mail" style="width: 60px; height: 60px;"><br>Email marketing
-                        </div>
-                        <div>
-                            <img src="profilepic.png" alt="profile" style="background-blend-mode:darken; height: 60px; width: 80px;">
-                        </div>
-                    </div>
+        <div id="title2">
+            <p>
+            <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Email <h1
+                    style="background-color: rgb(254, 254, 95); margin-left: 170px; margin-right: 170px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+                    marketing platform</h1>
+                <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">to grow your
+                    business!</h1>
+                </p>
+        </div>
 
-                </div>
+        <div class="pictures" style="margin-top: 50px;">
+            <div id="picmail">
+                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px;"><br> <p style="margin-bottom: 50px;">Email marketing</p>
             </div>
+            <div>
+                <img src="profilepic.png" alt="profile"
+                    style="background-blend-mode:darken; height: 50px; width: 70px; margin-left: 40px;"><br>
+                <p style="margin-left:30px; margin-bottom: 50px;">Advanced segmentation</p>
+            </div>
+         <div id="picmail">
+                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px; margin-left: 20px;"><br><p style="margin-left: 10px; margin-bottom: 50px;">Email marketing</p>
+            </div>
+            <div>
+                <img src="profilepic.png" alt="profile"
+                    style="background-blend-mode:darken; height: 50px; width: 70px; margin-left: 40px;"><br>
+                <p style="margin-left:30px; margin-bottom: 50px;">Advanced segmentation</p>
+            </div>
+                       <div id="picmail">
+                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px;"><br> Email marketing
+            </div>
+            <div>
+                <img src="profilepic.png" alt="profile"
+                    style="background-blend-mode:darken; height: 50px; width: 70px; margin-left: 40px;"><br>
+                <p style="margin-left:30px;">Advanced segmentation</p>
+            </div>
+         <div id="picmail">
+                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px; margin-left: 20px;"><br><p style="margin-left:10px ;"> Email marketing</p>
+            </div>
+            <div>
+                <img src="profilepic.png" alt="profile"
+                    style="background-blend-mode:darken; height: 50px; width: 70px; margin-left: 40px;"><br>
+                <p style="margin-left:30px;">Advanced segmentation</p>
+            </div>
+
+            
+        </div>
+    </div>
     </div>
 </body>
