added bottom text

--- a/index.html
+++ b/index.html
@@ -114,22 +114,24 @@
 
         <div class="pictures" style="margin-top: 50px;">
             <div id="picmail">
-                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px;"><br> <p style="margin-bottom: 50px;">Email marketing</p>
+                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px;"><br>
+                <p style="margin-bottom: 50px;">Email marketing</p>
             </div>
             <div>
                 <img src="profilepic.png" alt="profile"
                     style="background-blend-mode:darken; height: 50px; width: 70px; margin-left: 40px;"><br>
                 <p style="margin-left:30px; margin-bottom: 50px;">Advanced segmentation</p>
             </div>
-         <div id="picmail">
-                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px; margin-left: 20px;"><br><p style="margin-left: 10px; margin-bottom: 50px;">Email marketing</p>
+            <div id="picmail">
+                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px; margin-left: 20px;"><br>
+                <p style="margin-left: 10px; margin-bottom: 50px;">Email marketing</p>
             </div>
             <div>
                 <img src="profilepic.png" alt="profile"
                     style="background-blend-mode:darken; height: 50px; width: 70px; margin-left: 40px;"><br>
                 <p style="margin-left:30px; margin-bottom: 50px;">Advanced segmentation</p>
             </div>
-                       <div id="picmail">
+            <div id="picmail">
                 <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px;"><br> Email marketing
             </div>
             <div>
@@ -137,17 +139,22 @@
                     style="background-blend-mode:darken; height: 50px; width: 70px; margin-left: 40px;"><br>
                 <p style="margin-left:30px;">Advanced segmentation</p>
             </div>
-         <div id="picmail">
-                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px; margin-left: 20px;"><br><p style="margin-left:10px ;"> Email marketing</p>
+            <div id="picmail">
+                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px; margin-left: 20px;"><br>
+                <p style="margin-left:10px ;"> Email marketing</p>
             </div>
             <div>
                 <img src="profilepic.png" alt="profile"
                     style="background-blend-mode:darken; height: 50px; width: 70px; margin-left: 40px;"><br>
                 <p style="margin-left:30px;">Advanced segmentation</p>
             </div>
+            <div>
+                <p style="margin-top: 50px; margin-left: 70px; font-family:Verdana, Geneva, Tahoma, sans-serif;">Start for free ~ No credit card required ~ Cancel anytime.</p>
+            </div>
 
-            
+
         </div>
+
     </div>
     </div>
 </body>
