--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
             </form>
             <button
                 style="margin: 15px; width: 300px; height: 60px; border-radius: 44px; border-style:hidden; background-color: rgb(232, 179, 4); color: rgb(255, 255, 255);">
-                <b>CREATE ACCOUNT</b>
+                <a href="created.html"><b>CREATE ACCOUNT</b></a>
             </button>
             <p style="margin: 7px;">
                 Already have an account?
-                <a href="/login">Log In</a>
+                <a href="log.in.html">Log In</a>
             </p>
         </div>
     </div>
@@ -114,7 +114,7 @@
 
         <div class="pictures" style="margin-top: 50px;">
             <div id="picmail">
-                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px;"><br>
+                <img src="blue mail.png" alt="mail" style="width: 50px; height: 50px; mix-blend-mode: darken;"><br>
                 <p style="margin-bottom: 50px;">Email marketing</p>
             </div>
             <div>
@@ -149,7 +149,9 @@
                 <p style="margin-left:30px;">Advanced segmentation</p>
             </div>
             <div>
-                <p style="margin-top: 50px; margin-left: 70px; font-family:Verdana, Geneva, Tahoma, sans-serif;">Start for free ~ No credit card required ~ Cancel anytime.</p>
+                <p
+                    style="margin-top: 50px; margin-left: 90px; font-family:Verdana, Geneva, Tahoma, sans-serif; font-size:smaller; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; color: rgb(54, 54, 54);">
+                    Start for free ~ No credit card required ~ Cancel anytime.</p>
             </div>
 
 
